<resources>
    <string name="app_name">Blockchain Tutorial</string>
    <string name="activity_knowledge_activity">knowledge_activity</string>
    <string name="blockchain">Blockchain</string>
    <string name="background">Background</string>
    <string name="knowledge_test">Knowledge Test</string>
    <string name="title_activity_blockchain_">title_activity_blockchain_</string>
    <string name="title_activity_background">background</string>
    <string name="large_text">

Blockchain formation. The main chain (black) consists of the longest series of blocks from the genesis block (green) to the current block.
 Orphan blocks (purple) exist outside of the main chain.
Bitcoin network data
A blockchain,[1][2][3] originally block chain,[4][5] is a growing list of records, called blocks, which are linked using cryptography.
[1][6] Each block contains a cryptographic hash of the previous block,[6] a timestamp, and transaction data (generally represented as a merkle tree root hash).
By design, a blockchain is resistant to modification of the data. It is "an open, distributed ledger that can record transactions between
two parties efficiently and in a verifiable and permanent way".[7] For use as a distributed ledger, a blockchain is typically managed by a
 peer-to-peer network collectively adhering to a protocol for inter-node communication and validating new blocks. Once recorded, the data
 in any given block cannot be altered retroactively without alteration of all subsequent blocks, which requires consensus of the network
 majority. Although blockchain records are not unalterable, blockchains may be considered secure by design and exemplify a distributed
computing system with high Byzantine fault tolerance. Decentralized consensus has therefore been claimed with a blockchain.[8]
Blockchain was invented by a person using the name Satoshi Nakamoto in 2008 to serve as the public transaction ledger of the cryptocurrency bitcoin.[1]
The identity of Satoshi Nakamoto is unknown. The invention of the blockchain for bitcoin made it the first digital currency to solve the
double-spending problem without the need of a trusted authority or central server. The bitcoin design has inspired other applications,[1][3]
 and blockchains which are readable by the public are widely used by cryptocurrencies. Blockchain is considered a type of payment rail.
[9] Private blockchains have been proposed for business use. Sources such as the Computerworld called the marketing of such blockchains without
 a proper security model "snake oil".[10]
    </string>
    <string name="action_settings">Settings</string>
    <string name="quiz">quiz</string>
    <string name="quick_facts">quick facts</string>
    <string name="title_activity_quiz">quizActivity</string>
    <string name="by_design_a_blockchain_is_resistant_to_modification_of_the_data_it_is_an_open_distributed_ledger_that_can_record_transactions_between_two_parties_efficiently_and_in_a_verifiable_and_permanent_way_7_for_use_as_a_distributed_ledger_a_blockchain_is_typically_managed_by_a_peer_to_peer_network_collectively_adhering_to_a_protocol_for_inter_node_communication_and_validating_new_blocks_once_recorded_the_data_in_any_given_block_cannot_be_altered_retroactively_without_alteration_of_all_subsequent_blocks_which_requires_consensus_of_the_network_majority">By design, a blockchain is resistant to modification of the data. It is an open, distributed ledger that can record transactions between two parties efficiently and in a verifiable and permanent way.[7] For use as a distributed ledger, a blockchain is typically managed by a peer-to-peer network collectively adhering to a protocol for inter-node communication and validating new blocks. Once recorded, the data in any given block cannot be altered retroactively without alteration of all subsequent blocks, which requires consensus of the network majority.</string>
    <string name="blockchain_was_invented_by_a_person_or_group_of_people_using_the_name_satoshi_nakamoto_in_2008_to_serve_as_the_public_transaction_ledger_of_the_cryptocurrency_bitcoin_1_the_identity_of_satoshi_nakamoto_is_unknown_t">Blockchain was invented by a person (or group of people) using the name Satoshi Nakamoto in 2008 to serve as the public transaction ledger of the cryptocurrency bitcoin.[1] The identity of Satoshi Nakamoto is unknown. T</string>
    <string name="textviewthe_invention_of_the_blockchain_for_bitcoin_made_it_the_first_digital_currency_to_solve_the_double_spending_problem_without_the_need_of_a_trusted_authority_or_central_server_the_bitcoin_design_has_inspired_other_applications_1_3_and_blockchains_which_are_readable_by_the_public_are_widely_used_by_cryptocurrencies_blockchain_is_considered_a_type_of_payment_rail_9_private_blockchains_have_been_proposed_for_business_use_sources_such_as_computerworld_called_the_marketing_of_such_blockchains_without_a_proper_security_model_snake_oil_10">TextViewThe invention of the blockchain for bitcoin made it the first digital currency to solve the double-spending problem without the need of a trusted authority or central server. The bitcoin design has inspired other applications,[1][3] and blockchains which are readable by the public are widely used by cryptocurrencies. Blockchain is considered a type of payment rail.[9] Private blockchains have been proposed for business use. Sources such as Computerworld called the marketing of such blockchains without a proper security model snake oil.[10]</string>
    <string name="button">Button</string>
    <string name="picture_of_a_blockchain">picture of a blockchain</string>
    <string name="watch_video">Watch Video</string>
</resources>
