<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:textDirection="anyRtl"
    tools:context=".background_1">




    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/by_design_a_blockchain_is_resistant_to_modification_of_the_data_it_is_an_open_distributed_ledger_that_can_record_transactions_between_two_parties_efficiently_and_in_a_verifiable_and_permanent_way_7_for_use_as_a_distributed_ledger_a_blockchain_is_typically_managed_by_a_peer_to_peer_network_collectively_adhering_to_a_protocol_for_inter_node_communication_and_validating_new_blocks_once_recorded_the_data_in_any_given_block_cannot_be_altered_retroactively_without_alteration_of_all_subsequent_blocks_which_requires_consensus_of_the_network_majority" />


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="159dp"
                android:src="@drawable/testimage"/>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:text="@string/blockchain_was_invented_by_a_person_or_group_of_people_using_the_name_satoshi_nakamoto_in_2008_to_serve_as_the_public_transaction_ledger_of_the_cryptocurrency_bitcoin_1_the_identity_of_satoshi_nakamoto_is_unknown_t" />


            <Button
                android:id="@+id/videoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewthe_invention_of_the_blockchain_for_bitcoin_made_it_the_first_digital_currency_to_solve_the_double_spending_problem_without_the_need_of_a_trusted_authority_or_central_server_the_bitcoin_design_has_inspired_other_applications_1_3_and_blockchains_which_are_readable_by_the_public_are_widely_used_by_cryptocurrencies_blockchain_is_considered_a_type_of_payment_rail_9_private_blockchains_have_been_proposed_for_business_use_sources_such_as_computerworld_called_the_marketing_of_such_blockchains_without_a_proper_security_model_snake_oil_10" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" tools:srcCompat="@drawable/testimage" ' />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>